--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "dev": "webpack  --config  webpack.dev.config.js -w --progress  --colors"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,34 @@
   "bugs": {
     "url": "https://github.com/appbir/web/issues"
   },
-  "homepage": "https://github.com/appbir/web#readme"
+  "homepage": "https://github.com/appbir/web#readme",
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-syntax-jsx": "6.18.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "copy-webpack-plugin": "5.0.2",
+    "css-loader": "0.28.7",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "4.1.0",
+    "style-loader": "0.19.0",
+    "url-loader": "0.6.2",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.3.0"
+  }
 }
